# Homework_web_9_scrapy

./: authors.json  main.py  pyproject.toml  quotes.json
topquotes/: scrapy.cfg
topquotes/topquotes/: items.py  middlewares.py  pipelines.py  settings.py
topquotes/topquotes/spiders/: get_urls.py
